fixed scrollbar color

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
 	background-color: #BF8FE4;
 	overflow-x: hidden;
 	scroll-behavior: smooth;
+	scrollbar-color: auto;
 }
 
 .hidden {
